Modify testcases for Find command